--- a/WEEK-03/W03-Writeup.Rmd
+++ b/WEEK-03/W03-Writeup.Rmd
@@ -8,11 +8,10 @@ instructor: "Monte J. Shaffer"
 date: "`r format(Sys.time(), '%d %B, %Y')`"
 output:
     pdf_document:
-       citation_package: natbib
+       #citation_package: natbib
        latex_engine: pdflatex
        template:
-          #or maybe ./../latex-templates/homework.tex
-          C:\Users\Dorbs of Doom\_git_\WSU_STATS419_FALL2020\latex=templates\homework.tex
+          ./../latex-templates/homework.tex
 ---
 
 ```{r setup, include=FALSE}
@@ -29,10 +28,6 @@ When you click the **Knit** button a document will be generated that includes bo
 library(devtools)    #devtools is required for function source_url() to work....
 github.path = "https://raw.githubusercontent.com/kat-rivas/WSU_STATS419_FALL2020/"
 source_url(paste0(github.path, "master/functions/libraries.R"))
-source_url(paste0(github.path, "master/functions/functions-imdb.R"))
+#source_url(paste0(github.path, "master/functions/functions-dataframe.R"))
 ```
 
-SHA-1 HASH OF FILE IS 
-
-
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
