--- a/project-measure/project-measure-writeup.Rmd
+++ b/project-measure/project-measure-writeup.Rmd
@@ -330,8 +330,25 @@ source_url( paste0(path.github,"master/functions/functions-project-measure.R") )
 measure = readRDS("C:/Users/Dorbs of Doom/Documents/WSU/Fall 2020/STAT 419 Intro to Multivariate/final.measure.rds")
 
 measure.df = prepareMeasureData(measure)
+measure.df = data.frame(measure, stringsAsFactors = FALSE)
+  
+for (j in 1:length(measure.df$my.gender))
+{
+    if (measure.df[j,30] == "f")
+    {
+      measure.df[j,30] = "1"
+    }
+    if (measure.df[j,30] == "m")
+    {
+      measure.df[j,30] = "2"
+    }
+    if (measure.df[j,30] == "o")
+    {
+      measure.df[j,5] = "3"
+    }
+}
 
-
+measure.df[2,30]
 ```
 
 
