final commit for the final

--- a/biblio/master.bib
+++ b/biblio/master.bib
@@ -263,5 +263,38 @@ note = {\\ {\tiny \url{https://www.indeed.com/}}}
 }
 
 
+@Misc{Jacobs:2018,
+  year = 2018,
+  author = {Jacobs, Harrison and Zheng, Annie},
+  title	= {People have the wrong idea about the 3 most popular procedures in South Korea, the plastic surgery capital of the world},
+  institution =	 {Business Insider.com},
+  howpublished = {(Accessed: November 2020)},
+note = {\\ {\tiny \url{https://bit.ly/35dymbQ}}}
+}	
 
+
+@Misc{Koreaboo:2017,
+  year = 2017,
+  author = {Koreaboo},
+  title	= {{Are You Attractive Enough to Pass Korea's "8 Stacked Heads" Test?}},
+  institution =	 {Koreaboo.com},
+  howpublished = {(Accessed: November 2020)},
+note = {\\ {\tiny \url{https://bit.ly/3eDIqxE}}}
+}	
+
+@Misc{Ranker,
+  year = 2020,
+  author = {{ranker.com}},
+  title= {{The Best African-American Film Actors, ranker.com}},
+  insititution = {{ranker.com}},
+  howpublished = {(Accessed: December 2020)},
+  note = { \\ {https://bit.ly/2WhlcVH}}}
+
+@Misc{StackExchange, 
+  year= 2016,
+  author = {{Anonymous}},
+  title = {{combining multiple variables into one "score"}},
+  institution = {{stats.stackexchange.com}},
+  howpublished = {(Acessed: December 2020)},
+  note = {\\{https://bit.ly/37kY4fo}}}
 
